/*
 * This file is part of Shiro J Bot.
 * Copyright (C) 2019-2021  Yago Gimenez (KuuHaKu)
 *
 * Shiro J Bot is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * Shiro J Bot is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with Shiro J Bot.  If not, see <https://www.gnu.org/licenses/>
 */
//file:noinspection DifferentStdlibGradleVersion
//file:noinspection GroovyUnusedAssignment

buildscript {
	repositories {
		mavenCentral()
	}
}

plugins {
	id "java"
	id "idea"
	id "application"
	id "io.freefair.aspectj" version "6.4.1"
}

application {
	getMainClass().set("com.kuuhaku.Main")
	applicationDefaultJvmArgs = [
			"-Xms512M",
			"-Xmx4G",
			"-XX:+UseZGC",
			"-XX:+HeapDumpOnOutOfMemoryError",
			"-XX:HeapDumpPath=/shiro/ShiroJBot/logs/memdump.hprof",
			"-Dfile.encoding=UTF-8",
			"-Duser.timezone=America/Sao_Paulo",
			"-Djava.awt.headless=true",
			"-Dsun.java2d.opengl=true",
			"-Dlog4j2.contextSelector=org.apache.logging.log4j.core.async.AsyncLoggerContextSelector"
			//,"-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5005"
	]
}

group "com.kuuhaku"
version "STANDALONE"
sourceCompatibility = JavaVersion.VERSION_17
targetCompatibility = JavaVersion.VERSION_17

repositories {
	mavenCentral()
	maven { url "https://jitpack.io" }
	maven { url "https://m2.dv8tion.net/releases" }
	maven { url "https://oss.sonatype.org/content/repositories/releases/" }
}

run {
	standardInput = System.in
}

tasks.withType(JavaCompile) {
	options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation"
}

dependencies {
	//Core
	implementation group: "net.dv8tion", name: "JDA", version: "4.4.0_350"
	implementation group: "com.github.ygimenez", name: "Pagination-Utils", version: "3.0.8"

	//Database
	implementation group: "org.postgresql", name: "postgresql", version: "42.3.6"
	implementation group: "org.hibernate.orm", name: "hibernate-core", version: "6.1.1.Final"
	implementation group: "com.mchange", name: "c3p0", version: "0.9.5.5"
	implementation group: "org.hibernate.orm", name: "hibernate-c3p0", version: "6.1.1.Final"

	//Compiler
	implementation group: "org.apache.groovy", name: "groovy", version: "4.0.3"

	//Websocket
	implementation group: "org.java-websocket", name: "Java-WebSocket", version: "1.5.3"

	//Wrappers
	implementation group: "com.graphql-java", name: "graphql-java", version: "18.0"
	implementation group: "club.minnced", name: "discord-webhooks", version: "0.8.2"

	//Apache Commons
	implementation group: "org.apache.commons", name: "commons-lang3", version: "3.12.0"
	implementation group: "org.apache.commons", name: "commons-text", version: "1.9"
	implementation group: "org.apache.commons", name: "commons-math3", version: "3.6.1"
	implementation group: "org.apache.commons", name: "commons-imaging", version: "1.0-alpha2"
	implementation group: "org.apache.commons", name: "commons-compress", version: "1.21"
	implementation group: "org.apache.httpcomponents", name: "httpclient", version: "4.5.13"
	implementation group: "commons-validator", name: "commons-validator", version: "1.7"
	implementation group: "commons-codec", name: "commons-codec", version: "1.15"
	implementation group: "commons-cli", name: "commons-cli", version: "1.5.0"
	implementation group: "commons-io", name: "commons-io", version: "2.11.0"

	//Logger
	implementation group: "org.slf4j", name: "slf4j-api", version: "1.7.25"
	implementation group: "org.apache.logging.log4j", name: "log4j-api", version: "2.18.0"
	implementation group: "org.apache.logging.log4j", name: "log4j-core", version: "2.18.0"
	implementation group: "org.apache.logging.log4j", name: "log4j-slf4j-impl", version: "2.18.0"
	implementation group: "org.apache.logging.log4j", name: "log4j-jcl", version: "2.18.0"
	implementation group: "com.lmax", name: "disruptor", version: "3.4.4"

	//Util
	implementation group: "it.sauronsoftware.cron4j", name: "cron4j", version: "2.2.5"
	implementation group: "org.swinglabs.swingx", name: "swingx-graphics", version: "1.6.5-1"
	implementation group: "net.oneandone.reflections8", name: "reflections8", version: "0.11.7"
	implementation group: "com.squareup.moshi", name: "moshi", version: "1.13.0"
	implementation group: "com.squareup.moshi", name: "moshi-adapters", version: "1.13.0"
	implementation group: "com.squareup.okio", name: "okio", version: "3.1.0"
	implementation group: "io.github.furstenheim", name: "copy_down", version: "1.0"
	implementation group: "net.jodah", name: "expiringmap", version: "0.5.10"
	implementation group: "me.xuender", name: "unidecode", version: "0.0.7"
	implementation group: "com.github.sbesada", name: "java.math.expression.parser", version: "v3.3.0"
	implementation group: "org.tukaani", name: "xz", version: "1.9"
	implementation group: "org.mapdb", name: "mapdb", version: "3.0.8"
	implementation group: "com.vdurmont", name: "emoji-java", version: "5.1.1"
	implementation group: "org.aspectj", name: "aspectjrt", version: "1.9.9.1"
	implementation group: "org.shredzone.commons", name: "commons-suncalc", version: "3.5"
	implementation group: "org.sejda.imageio", name: "webp-imageio", version: "0.1.6"
	implementation group: "org.knowm.xchart", name: "xchart", version: "3.8.1"
	implementation group: "com.github.trickl", name: "palette", version: "0.1.1"

	//Unit test
	testImplementation group: "org.junit.jupiter", name: "junit-jupiter", version: "5.8.2"
}

idea {
	module {
		downloadJavadoc = true
		downloadSources = true
	}
}

sourceSets.main {
	aspectj.srcDir "src/main/java"
	java.srcDirs = files()
}

test {
	useJUnitPlatform()
}